# calvera

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  environment.yml  linucb.ipynb  mypy.ini  pyproject.toml  subroutines.md
.github/workflows/: pr.yml
docs/: ARCHITECTURE.md  architecture.drawio
examples/mnist/: linucb.ipynb  test_environment.ipynb
notes/: 13_12_24_notes.md  20_12_24_notes.md
src/neural_bandits/action_contextualisation/: __init__.py  abtract_contextualiser.py  multiclass.py  neural.py
src/neural_bandits/algorithms/: __init__.py  abstract_bandit.py  bayesian_bandit.py  linear_bandits.py  linucb.py  neural_linear.py
src/neural_bandits/bandit_algorithms/: __init__.py  abstract_bandit.py  linear_bandits.py
src/neural_bandits/datasets/: abstract_dataset.py  covertype.py  mnist.py  statlog.py  wheel.py
src/neural_bandits/environments/: base_environment.py
src/neural_bandits/trainers/: abstract_trainer.py  linear_trainer.py  neural_linear_trainer.py
src/neural_bandits/utils/: abtract_contextualiser.py  multiclass.py
tests/: test_base_environment.py  test_datasets.py  test_multiclass_contextualiser.py
