[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "NeuralBandits"
version = "0.1.0"
description = "Package that will offer a small collection of different Bandit algorithms with different feedback strategies."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Robert Weeke", email = "robert.weeke@student.hpi.de"},
    {name = "Philipp Kolbe", email = "philipp.kolbe@student.hpi.de"},
    {name = "Parisa Shahabinejad", email = "parisa.shahabinejad@student.hpi.de"}
]
keywords = ["python", "bandits", "neural networks"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "mypy>=0.991",
    "types-setuptools",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
files = "src/neural_bandits"
strict = true
python_version = "3.10"

follow_imports = "silent"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
show_error_codes = true
strict_optional = true
warn_redundant_casts = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
# many libraries (torch, torchvision, timm, print_on_stroids) do not support a
# py.typed marker and thus don't have library stubs. Thus we ignore these warns. 
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
known_third_party = ["numpy"]
line_length = 88
